[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/menu.theme" type="Theme" id=1]
[ext_resource path="res://assets/images/parchment_small.png" type="Texture" id=2]
[ext_resource path="res://scripts/gui.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.168627 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="gui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health_back" type="Sprite" parent="."]
position = Vector2( 154.712, 47.4685 )
texture = ExtResource( 2 )

[node name="health_label" type="Label" parent="health_back"]
margin_left = -83.0
margin_top = -45.0
margin_right = 89.0
margin_bottom = 40.0
text = "HEALTH: 5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="subtitles" type="Label" parent="."]
anchor_left = 0.2
anchor_top = 0.8
anchor_right = 0.8
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
custom_styles/normal = SubResource( 1 )
text = "Subtitles"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="voiceover" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="game_over_panel" type="PopupPanel" parent="."]
pause_mode = 2
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="game_over_panel"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = -18.8963
margin_top = 24.5298
margin_right = 20.7469
margin_bottom = -17.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="game_over_panel/VBoxContainer"]
margin_top = 51.0
margin_right = 279.0
margin_bottom = 101.0
text = "GAME OVER"
align = 1

[node name="menu_btn" type="Button" parent="game_over_panel/VBoxContainer"]
margin_top = 105.0
margin_right = 279.0
margin_bottom = 147.0
text = "Back to Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="victory_panel" type="PopupPanel" parent="."]
pause_mode = 2
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="victory_panel"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = -18.8963
margin_top = 24.5298
margin_right = 20.7469
margin_bottom = -17.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="victory_panel/VBoxContainer"]
margin_top = 51.0
margin_right = 279.0
margin_bottom = 101.0
text = "YOU WIN!"
align = 1

[node name="menu_btn" type="Button" parent="victory_panel/VBoxContainer"]
margin_top = 105.0
margin_right = 279.0
margin_bottom = 147.0
text = "Back to Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="game_over_panel/VBoxContainer/menu_btn" to="." method="_on_menu_btn_button_up"]
[connection signal="button_up" from="victory_panel/VBoxContainer/menu_btn" to="." method="_on_menu_btn_button_up"]
